@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_02-dev
 
+Apache::Registry will return DECLINED if -d $r->filename so 
+DirectoryIndex, etc., will work again
+
 mod_perl now passes 'make test' on BSD/OS 3.1 again. [ Vivek Khera ]
 
 added INSTALL.simple.mod_ssl and SSL_BASE=... Makefile.PL option
